--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sidharth Krishnan
-logo: /assets/image/headshot.jpg
+logo: /assets/image/headshot.png
 description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
