--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Sidharth Krishnan
-logo: /assets/image/headshot1.png
+![](/assets/image/headshot1.png | width=100
+#logo: /assets/image/headshot1.png
 description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
