--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sidharth Krishnan
 logo: /assets/image/headshot4.png
-#description: text below image
+description: Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
