--- a/DigitalTwin/requirements.txt
+++ b/DigitalTwin/requirements.txt
@@ -1,1 +1,11 @@
-pip install
+beautifulsoup4==4.12.3
+clang==17.0.6
+fake-useragent==2.0.3
+Flask==3.1.0
+Flask-Cors==5.0.0
+fonttools==4.38.0
+lxml_html_clean==0.4.1
+MarkupSafe==3.0.2
+tapo==0.8.0
+requests-html
+three
