--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ logo: /assets/image/headshot4.png
 description: Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
+google_analytics: G-RKWQ2VZPHH
