--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ description: Portfolio
 show_downloads: true
 theme: jekyll-theme-minimal
 google_analytics: G-RKWQ2VZPHH
+include: ["_includes/analytics.html"]
+
